--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="shortcut icon" href="/perfil.jpg" type="image/x-icon" />
   </head>
-  <body class="text-slate-500 dark">
+  <body class="">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
